week_12/kubernetes/network-policy-nginx.yaml
# Permite tráfico entrante a nginx desde el exterior
# y tráfico saliente de nginx hacia simple-app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: simple-app
      ports:
        - port: 3000
